# gulf-coast-inundation-lab

./: EXAMPLE_OUTPUT.md  PUBLISHING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
data/: gauge_validation_manifest.geojson  gauge_validation_manifest_readme.md  gauge_validation_sample.csv
docs/: architecture.md  data-flow.md  demo-storyboard.md  evaluation-artifact.md  gee-runbook.md
earthengine/: gauge_validation_export.js  gulf_coast_inundation_frequency.js
src/gulf_coast_inundation_lab/: __init__.py  validation.py  workflow_base.py
tests/: test_validation.py
